force-app/main/default/objects/Comerciales_Multibooking__c/Comerciales_Multibooking__c.object-meta.xml
<CustomObject>
    <description>Objecto que relaciona  las oportunidades con los comerciales para el multibooking</description>
    <label>Comerciales Multibooking</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Nº Relación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comerciales Multibooking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>