force-app/main/default/objects/Comerciales_Multibooking__c/fields/Comercial__c.field-meta.xml
<CustomField>
    <fullName>Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Comercial relacionado multibooking</description>
    <inlineHelpText>Comercial relacionado multibooking</inlineHelpText>
    <label>Comercial</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>La perdona debe ser comercial</errorMessage>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e0N000000i4KW</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e0N000000i4KY</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Relaciones_Oportunidades_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>