force-app/main/default/objects/Comerciales_Multibooking__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <description>Relación con la oportunidad</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Relaciones_Oportunidades_Comerciales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>